# ctoot

./: .gitignore  CMakeLists.txt  README.md  catch2.cmake  clearconan.bat  conanfile.py  rebuild.bat  rebuild.sh  rebuild32.bat  rebuild64.bat  vim.exe.stackdump
src/: CMakeLists.txt
src/audio/analysis/: SpectrumAnalyserControl.cpp  SpectrumAnalyserControl.hpp  SpectrumAnalyserControls.cpp  SpectrumAnalyserControls.hpp  SpectrumAnalyserProcess.cpp  SpectrumAnalyserProcess.hpp
src/audio/basic/: BasicIds.hpp  BasicServiceProvider.cpp  BasicServiceProvider.hpp
src/audio/core/: AudioBuffer.cpp  AudioControls.hpp  AudioControlsChain.cpp  AudioProcessAdapter.cpp  AudioProcessChain.cpp  AudioServices.cpp  AudioServices.hpp  ChannelFormat1.cpp  ChannelFormat2.cpp  ChannelFormat3.hpp  ChannelFormat4.hpp  ControlChainObserver.cpp  FloatSampleBuffer.cpp  KVolumeUtils.cpp  KVolumeUtils.hpp  MetaInfo.cpp  TapControl.cpp  TapControl.hpp  Taps.cpp  Taps.hpp
src/audio/delay/: AbstractDelayControls.hpp  CabMicingControls.cpp  CabMicingDControl.cpp  CabMicingDControl.hpp  CabMicingNControl.cpp  CabMicingNControl.hpp  DelayFactorControl.cpp  DelayFactorControl.hpp  DelayServiceProvider.cpp  FrequencyModulationProcess.cpp  MultiTapDelayControls.cpp  MultiTapDelayProcess.cpp  PhaserControls.hpp  ShapeControl.cpp  ShapeControl.hpp  StagesControl.cpp  StagesControl.hpp  TapeSpeedControl.cpp  TapeSpeedControl.hpp  TempoDelayControls.cpp  TempoDelayProcess.cpp  TempoDelayProcess.hpp  TempoDelayProcess1.hpp
src/audio/dynamics/: BusCompressor.cpp  BusCompressor.hpp  BusCompressorControls.cpp  BusCompressorControls.hpp  ClassicDynamicsProcess.cpp  ClassicDynamicsProcess.hpp  Compressor.cpp  Compressor.hpp  CompressorControls.cpp  CompressorControls.hpp  CrossoverControl.cpp  CrossoverControl.hpp  CrossoverSection.cpp  CrossoverSection.hpp  DualBandControls.cpp  DualBandControls.hpp  DynamicsControlIds.cpp  DynamicsControlIds.hpp  DynamicsControls.cpp  DynamicsControls.hpp  DynamicsIds.hpp  DynamicsProcess.cpp  DynamicsProcess.hpp  DynamicsServiceProvider.cpp  DynamicsServiceProvider.hpp  DynamicsVariables.hpp  Expander.cpp  Expander.hpp  ExpanderControls.cpp  ExpanderControls.hpp  GainReductionIndicator.cpp  GainReductionIndicator.hpp  Gate.cpp  Gate.hpp  GateControls.cpp  GateControls.hpp  InverseRatioControl.cpp  InverseRatioControl.hpp  IzBandCompressorControls.cpp  IzBandCompressorControls.hpp  (+44 more)
src/audio/filter/: AbstractFilter.cpp  AbstractFilter.hpp  AbstractFilterDesign.cpp  AbstractFilterDesign.hpp  AbstractFilterObserver.cpp  AbstractFilterObserver.hpp  BiQuadDesign.cpp  BiQuadDesign.hpp  BiQuadFilter.cpp  BiQuadFilter.hpp  BiQuadState.cpp  BiQuadState.hpp  Crossover.hpp  Filter.hpp  FilterDesign.hpp  FilterSpecification.hpp  FilterState.hpp  FilterTools.cpp  FilterTools.hpp  IIRCrossover.cpp  IIRCrossover.hpp
src/audio/meter/: MeterControls.cpp  MeterControls.hpp  MeterIndicator.cpp  MeterIndicator.hpp  MeterProcess.cpp  MeterProcess.hpp  MindBControl.cpp  MindBControl.hpp  OverIndicator.cpp  OverIndicator.hpp  ResetControl.cpp  ResetControl.hpp  TypeControl.cpp  TypeControl.hpp
src/audio/mixer/: AudioMixer.cpp  AudioMixerBus.hpp  BusControls.cpp  BusControls.hpp  MixerControls.cpp  MixerControlsObserver.cpp  MixerControlsObserver.hpp  RouteControl.cpp
src/audio/reverb/: BarrControls.cpp  BarrControls.hpp  MVerb.hpp  ReverbServiceProvider.cpp
src/audio/spi/: AudioControlServiceDescriptor.hpp  AudioServiceProvider.cpp  AudioServiceProvider.hpp
src/audio/system/: AudioOutput.hpp  AudioSystemObserver.cpp  MixerConnectedAudioSystem.cpp  MixerConnectedAudioSystem.hpp
src/control/: AbstractLaw.hpp  ChainMutation.cpp  ChainMutation.hpp  CompoundControl.cpp  CompoundControl.hpp  CompoundControlChain.cpp  CompoundControlMidiPersistence.cpp  CompoundControlMidiPersistence.hpp  CompoundControlPersistence.hpp  Control.cpp  Control.hpp  ControlFactory.hpp  EnumControl.cpp  EnumControl.hpp  FloatVectorControl.cpp  FloatVectorControl.hpp  IntegerControl.cpp  IntegerControl.hpp  IntegerLaw.cpp  IntegerLaw.hpp  LawControl.cpp  LogLaw.cpp
src/control/automation/: ControlSysexMsg.cpp  ControlSysexMsg.hpp  MidiPersistence.cpp  MidiPersistence.hpp
src/dsp/: Cosine.cpp  Cosine.hpp  FastMath.cpp  FastMath.hpp  Sine.cpp  Sine.hpp  VolumeUtils.cpp  VolumeUtils.hpp
src/dsp/filter/: BiQuadDesigner.cpp  BiQuadDesigner.hpp  FilterShape.hpp  (+2 more)
src/mpc/: InterconnectionOutputProcess.cpp  InterconnectionOutputProcess.hpp  MpcBasicSoundPlayerChannel.cpp  MpcBasicSoundPlayerChannel.hpp  MpcBasicSoundPlayerControls.cpp  MpcBasicSoundPlayerControls.hpp  MpcEnvelopeControls.cpp  MpcEnvelopeControls.hpp  MpcFaderControl.hpp  MpcIndivFxMixerChannel.hpp  MpcInputAdapter.cpp  MpcMixerControls.cpp  MpcMixerControls.hpp  MpcNoteParameters.hpp  MpcProgram.hpp  MpcSampler.hpp  MpcSoundOscillatorControls.cpp  MpcSoundOscillatorControls.hpp  MpcSoundPlayerChannel.cpp  MpcSoundPlayerChannel.hpp  MpcSoundPlayerControls.cpp  MpcSoundPlayerControls.hpp  MpcStereoMixerChannel.cpp  MpcStereoMixerChannel.hpp  MpcVoice.cpp
src/service/: ServiceDescriptor.cpp  ServiceDescriptor.hpp  ServiceProvider.cpp  ServiceProvider.hpp  ServiceVisitor.cpp  ServiceVisitor.hpp  Services.cpp  Services.hpp
src/synth/: BasicMidiSynth.hpp  MonophonicSynthChannel.cpp  MonophonicSynthChannel.hpp  ParaphonicSynthChannel.cpp  ParaphonicSynthChannel.hpp  PolyphonicSynthChannel.cpp  PolyphonicSynthChannel.hpp  PolyphonicSynthChannelAbstractVoice.cpp  PolyphonicSynthChannelAbstractVoice.hpp  PolyphonicSynthChannelVoice.hpp  SynthChannel.cpp  SynthChannel.hpp  SynthChannelControls.cpp  SynthChannelControls.hpp  SynthChannelServices.cpp  SynthChannelServices.hpp  SynthRack.cpp  SynthRackControls.hpp  SynthRackObserver.cpp  SynthServices.cpp  SynthServices.hpp
src/test/: test.cpp
src/util/: RouteObserver.cpp
(+874 files in other folders)
